quic/s2n-quic-platform/src/bpf/cbpf/snapshots/s2n_quic_platform__bpf__cbpf__tests__example_ipv4_tcp_packets_display.snap
---
source: quic/s2n-quic-platform/src/bpf/cbpf/tests.rs
expression: prog
---
l0   : LDH [0xc]
l1   : JEQ #2048,l2,l5
l2   : LDB [0x17]
l3   : JEQ #6,l4,l5
l4   : RET #4294967295
l5   : RET #0
