quic/s2n-quic-platform/src/bpf/cbpf/snapshots/s2n_quic_platform__bpf__cbpf__tests__hash_routing_c_literal.snap
---
source: quic/s2n-quic-platform/src/bpf/cbpf/tests.rs
expression: actual_c_literal
---
{ 0x20,  0,  0, 0xfffff020 },
{ 0x54,  0,  0, 0x00000001 },
{ 0x16,  0,  0, 0000000000 },
